[project]
name = "epigrass"
version = "3.0.3"
authors = [
    {name="Flávio Codeço Coelho", email="fccoelho@gmail.com"},
    {name="Claudia Torres Codeço", email="claudia.codeco@gmail.com"}
]
description = "Epidemiological Geo-Referenced Analysis and Simulation System"
readme = "README.md"
license = {text="GPLv3"}
requires-python = ">=3.12"
dependencies = [
    "altair>=5.5.0",
    "cython>=3.0.11",
    "dbfread>=2.0.7",
    "epimodels>=0.4.3",
    "fiona>=1.10.1",
    "geopandas>=1.0.1",
    "geoviews>=1.14.0",
    "holoviews>=1.20.0",
    "hvplot>=0.11.2",
    "matplotlib>=3.10.0",
    "networkx>=3.4.2",
    "numpy>=2.2.0",
    "nx-altair>=0.1.6",
    "pandas>=2.2.3",
    "panel>=1.5.5",
    "pweave>=0.30.3",
    "pymysql>=1.1.1",
    "redis>=5.2.1",
    "scikit-image>=0.25.0",
    "shapely>=2.0.6",
    "sqlalchemy>=2.0.36",
    "sqlobject>=3.11.0",
    "tqdm>=4.67.1",
]

[tool.uv]
package = true

[project.scripts]
epirunner = "Epigrass.manager:main"
